# markov-heatmap

./: LICENSE  README.md  main.py  pyproject.toml  word_frequency.py
data/: schtzngrmm.txt
