[project]
name = "markov-heatmap"
version = "0.1.0"
description = ""
authors = [
    { name = "craftpurist", email = "craftpurist@gmail.com" }
]
dependencies = [
    "seaborn>=0.13.2",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/markov_heatmap"]
